--- a/CollectorQi/Views/InventarioListaItemPage.xaml
+++ b/CollectorQi/Views/InventarioListaItemPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Inventário" x:Class="CollectorQi.Views.InventarioListaItemPage">
     <ContentPage.Content BackgroundColor="#4E4E4E">
-        <StackLayout BackgroundColor="#4E4E4E">
+        <StackLayout BackgroundColor="#fff">
             <!--<Grid BackgroundColor="#4E4E4E" Opacity="1" Margin="5,10,1,1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -13,12 +13,12 @@
                 <Label x:Name="lblDescItem" Grid.Row="2" Text="AAAA" FontSize="Medium" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Start" HorizontalOptions="FillAndExpand" />
             </Grid> -->
             <!--=<SearchBar IsVisible="{Binding SearchMode}" Placeholder="Digite o código ou descrição do item..." Text="{Binding SearchText}"  x:Name="SearchBarItCodigo" TextChanged="Handle_TextChanged" PlaceholderColor="White" FontSize="Small"/>-->
-            
-        <StackLayout  BackgroundColor="#4E4E4E" IsClippedToBounds="True" HorizontalOptions="FillAndExpand" VerticalOptions="Center" Padding="10, 10" Spacing="3">
+
+        <StackLayout  BackgroundColor="#fff" IsClippedToBounds="True" HorizontalOptions="FillAndExpand" VerticalOptions="Center" Padding="10, 10" Spacing="3">
         
         <Frame VerticalOptions="StartAndExpand" HasShadow="true" Margin="10,10,10,10" CornerRadius="5" x:Name="frame" OutlineColor="#A5C3FA" BackgroundColor="#b4b4b1" HeightRequest="30">
                                 
-            <SearchBar IsVisible="{Binding SearchMode}" 
+            <!--<SearchBar IsVisible="{Binding SearchMode}" 
                        Placeholder="Digite o código ou descrição do item..." 
                        Text="{Binding SearchText}" 
                        x:Name="SearchBarItCodigo" 
@@ -26,7 +26,7 @@
                        VerticalOptions="StartAndExpand"
                        HorizontalOptions="StartAndExpand"
                        Margin="-10,0,0,0"
-                       FontSize="Small"/>
+                       FontSize="Small"/>-->
         </Frame>
         
             
@@ -46,12 +46,11 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                          
-                                <StackLayout Spacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                            <StackLayout Spacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                             <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
                           
                           
-                                <Grid>
-                                    
+                                <Grid>                                    
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="70"/>
@@ -70,9 +69,7 @@
                                     </Grid.ColumnDefinitions>
                                     <Image Source="{Binding Image}" Grid.Row="0"  WidthRequest="30"  HorizontalOptions="Center" VerticalOptions="Start"/>
                                     <Label Text="{Binding StatusItemInventario}" Grid.Row="1"  FontSize="Micro" HorizontalOptions="Center" VerticalOptions="Start" />
-                                </Grid>
-                                    
-                                    
+                                </Grid> 
                                     
                                 <StackLayout Spacing="1" Grid.Row="0" Grid.Column="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0">
                                     
@@ -86,8 +83,9 @@
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
                                         <Label Grid.Row="0" Grid.Column="0" Text="Item: " FontAttributes="Bold"  FontSize="Micro" />
-                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />
-                                        <Label Grid.Row="0" Grid.Column="2" Text="{Binding __item__.DescItem}" LineBreakMode="TailTruncation"  HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />
+                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding InventarioItemId}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />
+                                        <!--<Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />-->
+                                        <!--<Label Grid.Row="0" Grid.Column="2" Text="{Binding __item__.DescItem}" LineBreakMode="TailTruncation"  HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />-->
                                     </Grid>
                                     <Grid HorizontalOptions="FillAndExpand">
                                         <Grid.RowDefinitions>
@@ -148,34 +146,34 @@
                                             </Label.Triggers>
                                         </Label>
                                     </Grid>
-                                    <Grid HorizontalOptions="FillAndExpand">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*" />
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition Width="Auto" />
-                                        </Grid.ColumnDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="Localização: " FontAttributes="Bold"  FontSize="Micro">
-                                            <Label.Triggers>
-                                                <DataTrigger TargetType="Label" Binding="{Binding CodLocaliz}" Value="">
-                                                    <Setter Property="IsVisible" Value="False" />
-                                                    <Setter Property="HeightRequest" Value="0" />
-                                                </DataTrigger>
-                                            </Label.Triggers>
-                                        </Label>
-                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodLocaliz}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro">
-                                            <Label.Triggers>
-                                                <DataTrigger TargetType="Label" Binding="{Binding CodLocaliz}" Value="">
-                                                    <Setter Property="IsVisible" Value="False" />
-                                                    <Setter Property="HeightRequest" Value="0" />
-                                                </DataTrigger>
-                                            </Label.Triggers>
-                                        </Label>
-                                    </Grid>
-                                    <Grid HorizontalOptions="FillAndExpand">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*" />
+                                        <Grid HorizontalOptions="FillAndExpand">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*" />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto" />
+                                                <ColumnDefinition Width="Auto" />
+                                            </Grid.ColumnDefinitions>
+                                            <Label Grid.Row="0" Grid.Column="0" Text="Localização: " FontAttributes="Bold"  FontSize="Micro">
+                                                <Label.Triggers>
+                                                    <DataTrigger TargetType="Label" Binding="{Binding CodLocaliz}" Value="">
+                                                        <Setter Property="IsVisible" Value="False" />
+                                                        <Setter Property="HeightRequest" Value="0" />
+                                                    </DataTrigger>
+                                                </Label.Triggers>
+                                            </Label>
+                                            <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodLocaliz}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro">
+                                                <Label.Triggers>
+                                                    <DataTrigger TargetType="Label" Binding="{Binding CodLocaliz}" Value="">
+                                                        <Setter Property="IsVisible" Value="False" />
+                                                        <Setter Property="HeightRequest" Value="0" />
+                                                    </DataTrigger>
+                                                </Label.Triggers>
+                                            </Label>  
+                                        </Grid>
+                                        <Grid HorizontalOptions="FillAndExpand">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*" />
                                         </Grid.RowDefinitions>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
