--- a/CollectorQi/Views/LeituraEtiquetaLocaliza.xaml
+++ b/CollectorQi/Views/LeituraEtiquetaLocaliza.xaml
@@ -16,15 +16,19 @@
             <StackLayout Spacing="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                 <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
 
-                    <SearchBar IsVisible="{Binding SearchMode}" 
+                    <!--<SearchBar IsVisible="{Binding SearchMode}" 
                                    Placeholder="Digite a etiqueta..." 
                                    Text="{Binding SearchText}" 
                                    x:Name="txtEtiqueta"                         
                                    VerticalOptions="StartAndExpand"
                                    HorizontalOptions="StartAndExpand"
                                    Margin="-10,0,0,0"
-                                   FontSize="Small"/>
-                </Frame>
+                                   FontSize="Small"/>-->
+
+                    <Entry x:Name="txtEtiqueta" Placeholder="Digite a etiqueta.." VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" FontSize="Small" WidthRequest="400"/>
+
+                </Frame>              
+
             </StackLayout>
 
             <!--<CollectionView x:Name="cvLeituraEtiquetaLocaliza" SelectionMode="Single" Margin="10,0,10,0">
@@ -46,7 +50,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <Button x:Name="BtnBuscaEtiqueta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor=" Silver"  BorderRadius="16"
+                <Button x:Name="BtnBuscaEtiqueta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                             Clicked="OnClick_BuscaEtiqueta" Grid.Row="0" Grid.Column="0" Text="Busca Etiqueta" TextColor="White" />  
 
                 <Button x:Name="BtnProximo" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
