--- a/CollectorQi/Views/ImprimirPage.xaml
+++ b/CollectorQi/Views/ImprimirPage.xaml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Localiza Leitura da Etiqueta " x:Class="CollectorQi.Views.LeituraEtiquetaLocaliza">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" 
+             xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib" 
+             Title="Imprimir" 
+             x:Class="CollectorQi.Views.ImprimirPage">
     <ContentPage.Content>
         <!--<StackLayout BackgroundColor="#4E4E4E">-->
         <StackLayout BackgroundColor="#fff">
@@ -8,7 +14,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-          
+
                     <Label x:Name="lblCodEstabel"  VerticalOptions="Start" HorizontalOptions="Start" Font="Small" FontAttributes="Bold"  />
                 </Grid>
             </Frame>
@@ -24,10 +30,18 @@
                                    HorizontalOptions="StartAndExpand"
                                    Margin="-10,0,0,0"
                                    FontSize="Small"/>-->
-            
-                    <Entry x:Name="txtEtiqueta" Placeholder="Digite a etiqueta.." VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" FontSize="Small" WidthRequest="400"/>
 
-                </Frame>              
+                    <!--<StackLayout x:Name="rbgImprimir" Padding="30,0" Spacing="12">-->
+                    
+                    <StackLayout x:Name="rbgImprimir" >
+                            <input:RadioButtonGroupView>                            
+                            <input:RadioButton Text="Item" />
+                            <input:RadioButton Text="Localização" />
+                            <input:RadioButton Text="Reparo" />
+                        </input:RadioButtonGroupView>
+                    </StackLayout>                    
+
+                </Frame>
 
             </StackLayout>
 
@@ -44,19 +58,19 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>-->
 
-            <Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
+            <!--<Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
                 <Button x:Name="BtnBuscaEtiqueta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
-                            Clicked="OnClick_BuscaEtiqueta" Grid.Row="0" Grid.Column="0" Text="Busca Etiqueta" TextColor="White" />  
+                            Clicked="OnClick_BuscaEtiqueta" Grid.Row="0" Grid.Column="0" Text="Busca Etiqueta" TextColor="White" />
 
                 <Button x:Name="BtnProximo" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                           Clicked="OnClick_Proximo" Grid.Row="1" Grid.Column="0" Text="Próximo" TextColor="White" />
 
-            </Grid>
+            </Grid>-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
