--- a/CollectorQi/Views/InventarioListaItemPage.xaml
+++ b/CollectorQi/Views/InventarioListaItemPage.xaml
@@ -35,7 +35,7 @@
                         <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
 
-                    <Grid>
+                    <Grid Grid.Row="0">
                         <CollectionView x:Name="cvInventarioItem" ItemsSource="{Binding Items}" SelectionMode="Single" Grid.Row="0" Margin="10,0,10,0">
                             <CollectionView.EmptyView>
                                 <StackLayout>
@@ -178,7 +178,7 @@
                                                         <!--<Label Grid.Row="0" Grid.Column="0" Text="Nr Ficha: " FontAttributes="Bold"  FontSize="Micro" />
                                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding NrFicha}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro" />-->
                                                         <Label Grid.Row="0" Grid.Column="0" Text="Quantidade: " FontAttributes="Bold"  FontSize="Micro" />
-                                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding QtdDigitada}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro" />
+                                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding Quantidade}" HorizontalTextAlignment="End" VerticalTextAlignment="End"  FontSize="Micro" />
                                                     </Grid>
                                                 </StackLayout>
                                             </Grid>
@@ -189,8 +189,7 @@
                         </CollectionView>
                     </Grid>
 
-                    <Grid>
-
+                    <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
@@ -199,18 +198,18 @@
                         <Grid Grid.Column="0" Margin="0,0,0,0" VerticalOptions="End" HorizontalOptions="FillAndExpand">
                             <Button x:Name="BtnBuscaItem" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                     Clicked="OnClick_BuscaItem" Grid.Row="0" Grid.Column="0" Text="Busca Item (Etiqueta)" TextColor="White" />
-                            <Button x:Name="BtnCaixaIncompleta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
+                            <Button x:Name="BtnCaixaIncompleta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                     Clicked="OnClick_CaixaIncompleta"  Grid.Row="1" Grid.Column="0" Text="Caixa Incompleta" TextColor="White" />
-                            <Button x:Name="BtnEfetivaInventario" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
-                                    Clicked="OnClick_EfetivaInventario" Grid.Row="2" Grid.Column="0" Text="Efetiva Inventário" TextColor="White" />                    
+                            <Button x:Name="BtnImprimir" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
+                                    Clicked="BtnImprimir_Clicked" Grid.Row="2" Grid.Column="0" Text="Imprimir" TextColor="White" />
                         </Grid>
 
                         <Grid Grid.Column="1" Margin="0,0,0,0" VerticalOptions="End" HorizontalOptions="FillAndExpand">
-                            <Button x:Name="BtnImprimir" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
-                                    Grid.Row="0" Grid.Column="0" Text="Imprimir" TextColor="White" />
-                            <Button x:Name="BtnLimpar" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
+                            <Button x:Name="BtnEfetivaInventario" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
+                                    Clicked="OnClick_EfetivaInventario" Grid.Row="0" Grid.Column="0" Text="Efetiva Inventário" TextColor="White" />
+                            <Button x:Name="BtnLimpar" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                     Clicked="BtnLimpar_Clicked" Grid.Row="1" Grid.Column="0" Text="Limpar" TextColor="White" />
-                            <Button x:Name="BtnZerar" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
+                            <Button x:Name="BtnZerar" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                     Clicked="BtnZerar_Clicked"  Grid.Row="2" Grid.Column="0" Text="Zerar" TextColor="White" />
                         </Grid>
                     </Grid>
