--- a/CollectorQi/Views/ESCL002/ConferenciaFisicaConfirmarPage.xaml
+++ b/CollectorQi/Views/ESCL002/ConferenciaFisicaConfirmarPage.xaml
@@ -50,10 +50,10 @@
                                     <!--<Label Grid.Row="1"  VerticalOptions="StartAndExpand" Grid.Column="0" Text="{Binding RowId}" FontAttributes="Bold" />
                                     <Button Grid.RowSpan="2" Padding="0,10,0,0" x:Name="BtnConfirmar" Image="closeMini.png" HorizontalOptions="Center" BorderRadius="16" Clicked="OnClick_Confirmar" Grid.Column="1" BackgroundColor="#fff"/>-->
                                     <Label Grid.Row="1"  VerticalOptions="StartAndExpand" Grid.Column="0" Text="{Binding CodItem}" FontAttributes="Bold"/>
-                                    <Label Grid.Row="1"  VerticalOptions="StartAndExpand" Grid.Column="1" Text="{Binding NumRR}" FontAttributes="Bold"/>
-                                    <Image Source="{Binding Image}" Grid.Row="1" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Start" />
-                                    <Button Grid.Row="1" Grid.Column="3" x:Name="BtnExcluir" Image="closeMini.png" HorizontalOptions="Center" VerticalOptions="Start" BorderRadius="16" Clicked="OnClick_Excluir" />
-                                    <Label Grid.Row="2"  Grid.Column="0" Grid.ColumnSpan="2" VerticalOptions="StartAndExpand" Text="{Binding Mensagem}" />
+                                    <Label Grid.Row="1"  VerticalOptions="StartAndExpand" Grid.Column="1" Text="{Binding DescItem}" FontAttributes="Bold" FontSize="Micro"/>
+                                    <Image Source="{Binding Image}" Grid.Row="1" Grid.RowSpan="1" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Start" />
+                                    <!-- <Button Grid.Row="1" Grid.Column="3" x:Name="BtnExcluir" Image="closeMini.png" HorizontalOptions="Center" VerticalOptions="Start" BorderRadius="16" Clicked="OnClick_Excluir" /> -->
+                                    <Label Grid.Row="2"  Grid.Column="0" Grid.ColumnSpan="2" VerticalOptions="StartAndExpand" Text="{Binding Mensagem}" FontSize="Micro" LineBreakMode="CharacterWrap" />
                                 </Grid>                               
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
