--- a/CollectorQi/Views/ImprimirPage.xaml
+++ b/CollectorQi/Views/ImprimirPage.xaml
@@ -19,10 +19,10 @@
                 </Grid>
             </Frame>
 
-            <StackLayout Spacing="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+            <!--<StackLayout Spacing="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                 <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
 
-                    <!--<SearchBar IsVisible="{Binding SearchMode}" 
+                    --><!--<SearchBar IsVisible="{Binding SearchMode}" 
                                    Placeholder="Digite a etiqueta..." 
                                    Text="{Binding SearchText}" 
                                    x:Name="txtEtiqueta"                         
@@ -31,7 +31,7 @@
                                    Margin="-10,0,0,0"
                                    FontSize="Small"/>-->
 
-                    <!--<StackLayout x:Name="rbgImprimir" Padding="30,0" Spacing="12">-->
+                    <!--<StackLayout x:Name="rbgImprimir" Padding="30,0" Spacing="12">--><!--
                     
                     <StackLayout x:Name="rbgImprimir" >
                             <input:RadioButtonGroupView>                            
@@ -43,7 +43,7 @@
 
                 </Frame>
 
-            </StackLayout>
+            </StackLayout>-->
 
             <!--<CollectionView x:Name="cvLeituraEtiquetaLocaliza" SelectionMode="Single" Margin="10,0,10,0">
                 <CollectionView.EmptyView>
@@ -57,20 +57,25 @@
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>-->
+            
 
-            <!--<Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
+            <Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <Button x:Name="BtnBuscaEtiqueta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
-                            Clicked="OnClick_BuscaEtiqueta" Grid.Row="0" Grid.Column="0" Text="Busca Etiqueta" TextColor="White" />
+                <Button x:Name="BtnItem" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
+                          Clicked="BtnItem_Clicked" Grid.Row="0" Grid.Column="0" Text="Item" TextColor="White" />
 
-                <Button x:Name="BtnProximo" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
-                          Clicked="OnClick_Proximo" Grid.Row="1" Grid.Column="0" Text="Próximo" TextColor="White" />
+                <Button x:Name="BtnLocalizacao" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
+                          Clicked="BtnLocalizacao_Clicked" Grid.Row="1" Grid.Column="0" Text="Localização" TextColor="White" />
 
-            </Grid>-->
+                <Button x:Name="BtnReparo" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
+                         Clicked="BtnReparo_Clicked" Grid.Row="2" Grid.Column="0" Text="Reparo" TextColor="White" />
+
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
